[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/options.gd" type="Script" id=1]
[ext_resource path="res://assets/cards1/13_0.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Kanit-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/check_button_checked.png" type="Texture" id=4]
[ext_resource path="res://assets/check_button.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.0980392, 0.113725, 0.160784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=1]
size = 48
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 66
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="Theme" id=16]

[sub_resource type="DynamicFont" id=8]
size = 60
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=17]
size = 60
outline_size = 3
use_filter = true
font_data = ExtResource( 3 )

[node name="Options" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -250.0
margin_right = 350.0
margin_bottom = 354.0
rect_pivot_offset = Vector2( 350, 250 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 15 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_left = 20.0
margin_right = 680.0
margin_bottom = 604.0
custom_constants/separation = 40
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 660.0
margin_bottom = 235.0
custom_constants/separation = 25

[node name="CardLayout" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 16.0
margin_right = 410.0
margin_bottom = 88.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Wzór karty"
valign = 1

[node name="Prev" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 435.0
margin_top = 2.0
margin_right = 485.0
margin_bottom = 102.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 50 )
mouse_default_cursor_shape = 2
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 13 )
text = "<"

[node name="Card" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 510.0
margin_right = 585.0
margin_bottom = 105.0
rect_min_size = Vector2( 75, 105 )
size_flags_vertical = 6
texture = ExtResource( 2 )
expand = true

[node name="Next" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 610.0
margin_top = 2.0
margin_right = 660.0
margin_bottom = 102.0
rect_min_size = Vector2( 50, 50 )
rect_pivot_offset = Vector2( 25, 50 )
mouse_default_cursor_shape = 2
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = ">"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 275.0
margin_right = 660.0
margin_bottom = 350.0
custom_constants/separation = 25

[node name="BkgColor" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 1.0
margin_right = 485.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Kolor tła"
valign = 1

[node name="Border" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 510.0
margin_right = 585.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )

[node name="Color" type="ColorRect" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2/Border"]
margin_left = 1.0
margin_top = 1.0
margin_right = 74.0
margin_bottom = 74.0
rect_min_size = Vector2( 73, 73 )
mouse_default_cursor_shape = 2
theme = SubResource( 16 )
color = Color( 0.278431, 0.133333, 0.133333, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 610.0
margin_right = 660.0
margin_bottom = 75.0
rect_min_size = Vector2( 50, 0 )

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 390.0
margin_right = 660.0
margin_bottom = 473.0
custom_constants/separation = 25

[node name="BkgColor" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 5.0
margin_right = 477.0
margin_bottom = 77.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Pełny ekran"
valign = 1

[node name="FullScreen" type="CheckBox" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 502.0
margin_right = 585.0
margin_bottom = 83.0
rect_min_size = Vector2( 75, 75 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
custom_icons/checked = ExtResource( 4 )
custom_icons/unchecked = ExtResource( 5 )
shortcut_in_tooltip = false
action_mode = 0
enabled_focus_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 610.0
margin_right = 660.0
margin_bottom = 83.0
rect_min_size = Vector2( 50, 0 )

[node name="ColorPicker" type="ColorPicker" parent="Panel"]
visible = false
margin_left = 711.0
margin_top = 87.0
margin_right = 1019.0
margin_bottom = 499.0
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="OK" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -110.0
margin_right = 48.0
margin_bottom = -14.0
rect_pivot_offset = Vector2( 48, 48 )
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 14 )
text = "OK"

[node name="Label" type="Label" parent="Panel"]
anchor_right = 1.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.666667, 0.0431373, 0.0431373, 1 )
custom_fonts/font = SubResource( 17 )
text = "Ustawienia"
align = 1

[connection signal="visibility_changed" from="." to="." method="_on_Options_visibility_changed"]
[connection signal="gui_input" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/Border/Color" to="." method="_on_Color_gui_input"]
[connection signal="toggled" from="Panel/MarginContainer/VBoxContainer/HBoxContainer3/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="color_changed" from="Panel/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
